web/public/js/directives/cd-start-dojo/team/style.less
cd-sad-team {
  display: block;
}
.cd-sad-team {
  display: flex;
  align-items: flex-start;
  align-content: space-around;
  flex-wrap: wrap;
  & > * {
    @media (min-width: @screen-sm-min) {
      padding-left: 8px;
      padding-right: 8px;
    }
  }
  &__video {
    flex: 1;
    text-align: center;
    flex-basis: 400px;
    &-container {
      width: 100%;
    }
  }
  &__side-form {
    flex: 1;
    flex-basis: @screen-xs-min;
    flex-wrap: wrap;
  }
  &__bottom-form {
    margin-top: 16px;
    flex: 1;
    flex-basis: 100%;
  }
  &__team-block {
    margin-top: 16px;
    margin-bottom: 16px;
    justify-content: space-around;
    .team-block() {
      box-shadow: @cd-box-shadow;
      flex-basis: 100%;
      padding: 8px;
    }
    &--exists {
      .team-block;
      display: flex;
      flex-wrap: wrap;
      & > label.cd-sad-team__team-block-description {
        flex-basis: 100%;
        padding: 8px;
      }
    }
    &--solo {
      .team-block;
    }
    &-srcs {
      flex: 1;
      padding: 8px;
      flex-basis: 320px;
      font-weight: normal;
    }
  }
  &__team-choice {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    box-shadow: @cd-box-shadow;
    padding: 8px;
    margin: 8px;
    flex-basis: 200px;
    min-height: 150px;
    &-action {
      display: flex;
      justify-content: center;
      flex-direction: column;
      height: 100%;
    }
    &-selector {
      align-self: flex-start;
      transform: scale(1.5);
      &[aria-checked="true"] {
        transform: scale(2);
      }
    }
    &-selected {
      flex: 2;
      flex-basis: 300px;
    }
    &-not-selected {
      background-color: @cd-very-light-grey;
    }
    &-group {
      text-align: center;
      display: flex;
      flex-wrap: wrap;
    }
  }
  &__button-group {
    display: flex;
    & > * {
      flex: 1;
      flex-basis: 30%;
    }
  }
}

